--- a/src/style.css
+++ b/src/style.css
@@ -5,20 +5,29 @@
 }
 
 body {
-  background-color: #0B2434;
-  font-family: 'Karla', sans-serif;
+  background-color: #0b2434;
+  font-family: "Karla", sans-serif;
 }
 
 main {
-  background-color: #F5F5F5;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  align-items: center;
+}
+
+.board {
+  padding-left: 40px;
+  padding-right: 40px;
+  background-color: #f5f5f5;
   height: 400px;
-  max-width: 800px;
-  margin: 20px;
+  margin: 0 40px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
 }
 
 .title {
@@ -28,8 +37,9 @@ main {
 }
 
 .instructions {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
+  line-height: 1.4;
 }
 
 .dice-container {
@@ -51,25 +61,39 @@ main {
 }
 
 .die-num {
-  color: #2B283A;
+  color: #2b283a;
   font-weight: 700;
 }
 
- .roll-dice {
+.roll-dice {
   height: 40px;
   width: 92px;
   border-radius: 4px;
   border: none;
-  background-color: #5035FF;
+  background-color: #5035ff;
   color: white;
   font-weight: 700;
   cursor: pointer;
- }
+}
 
- .roll-dice:focus {
+.roll-dice:focus {
   outline: none;
- }
+}
 
- .roll-dice:active {
+.roll-dice:active {
   box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
- }
+}
+
+/* responsive */
+@media (max-width: 500px) {
+  .board {
+    margin-left: 15px;
+    margin-right: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+    height: 350px;
+  }
+  .dice-container {
+    gap: 5px;
+  }
+}
